# mara-app

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  Pipfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.sh  tox.ini
.github/: github_actions_usage.md
.github/workflows/: build_for_deployment.yaml  gitlab_actions.yaml
.scripts/: Makefile  ensure-pushed.sh  init.mk  install.mk  makeshell
docs/: api.rst  conf.py  config.rst  index.rst  installation.md  monkey-patch.md  requirements.txt
mara_app/: __init__.py  app.py  cli.py  config.py  layout.py  migrations.py  monkey_patch.py  views.py
mara_app/.scripts/: README.MD  check-newer.sh  ensure-pushed.sh  init.mk  install.mk  makeshell
mara_app/frontend/: package-lock.json  package.json
mara_app/frontend/components/alert/: index.js  index.scss
mara_app/frontend/components/card/: index.scss
mara_app/frontend/components/filters/: index.js  index.scss
mara_app/frontend/components/header/: index.scss
mara_app/frontend/entries/: mara.js
mara_app/frontend/js/: content-loader.js  window.js
mara_app/frontend/scss/: base.scss  mixins.scss  variables.scss
mara_app/static/: jquery.floatThead.2.0.3.min.js  mara.css  mara.js  mara.map  mara.scss
mara_app/static/bootstrap-4.0.0-alpha.6/: bootstrap.min.css.map
mara_app/static/src/: action-menu-button.scss  action-menu.scss  button.scss  checkbox.scss  layout.scss  mara-filters.scss  mara-main.scss  mara-navigation.scss  mixins.scss  page-header.scss  variables.scss
tests/: test_api.py  test_flask_blueprint.py  wrap_target.py
(+8 files in other folders)
