[metadata]
name = mara-app
version = attr: mara_app.__version__
url = https://github.com/mara/mara-app
description = Framework for distributing flask apps across separate packages with minimal dependencies
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_app
python_requires = >= 3.8
install_requires =
    mara-page>=1.7.0
    mara-db>=3.0.0
    flask>=1.0.2

[options.extras_require]
test = pytest; pytest_click

[options.package_data]
mara_app = .scripts/*, static/**/*
